# typst-editor

./: .gitignore  Cargo.toml  README.md  plan.md
.cargo/: config.toml
.github/workflows/: main.yml
crates/bidi-text/: Cargo.toml
crates/bidi-text/src/: algorithm.rs  cursor.rs  layout.rs  lib.rs
crates/bidi-text/tests/: cursor_movement_tests.rs
crates/editor-core/: Cargo.toml
crates/editor-core/src/: buffer.rs  lib.rs  operations.rs  selection.rs
crates/editor-core/src/buffer/: word_boundaries.rs
crates/editor-core/tests/: buffer_tests.rs  operations_tests.rs  selection_tests.rs
crates/lsp-client/: Cargo.toml
crates/lsp-client/src/: lib.rs  notifications.rs  protocol.rs  requests.rs
crates/preview/: Cargo.toml
crates/preview/src/: lib.rs  renderer.rs  sync.rs  viewport.rs
crates/typst-integration/: Cargo.toml
crates/typst-integration/src/: compiler.rs  diagnostics.rs  lib.rs  world.rs
crates/ui-components/: Cargo.toml
crates/ui-components/src/: decorations.rs  editor_view.rs  lib.rs  panels.rs  preview_pane.rs  sidebar.rs
crates/ui-components/src/editor_view/: cursor_renderer.rs  gutter.rs  line_renderer.rs  mod.rs  overlays.rs  scrollbar.rs  status_bar.rs  text_content.rs
crates/ui-components/src/input/: input_handler.rs  key_bindings.rs  mod.rs
crates/ui-components/src/rendering/: font_management.rs  glyph_cache.rs  line_layout.rs  mod.rs  text_shaping.rs  viewport.rs
crates/ui-components/src/syntax/: highlighting.rs  mod.rs  theme.rs
src/: app.rs  main.rs  state.rs
