[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "io-util",
    "time",
    "macros",
] }
lsp-types = "0.94"

[dev-dependencies]
mockall = "0.12"
