[package]
name = "typst-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = "0.12"
typst-syntax = "0.13.1"
typst-utils = "0.12"
comemo = "0.4"
chrono = "0.4"
time = "0.3"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "io-util",
    "time",
    "macros",
] }

[dev-dependencies]
tempfile = "3.8"
