[package]
name = "ui-components"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.1"
editor-core = { path = "../editor-core" }
bidi-text = { path = "../bidi-text" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

rustybuzz = "0.18"
ttf-parser = "0.24"
fontdb = "0.22"
swash = "0.1"
unicode-segmentation = "1.12"

typst-syntax = "0.12"

palette = { version = "0.7", features = ["std"] }

bitflags = "2.6"
once_cell = "1.19"
